--- a/wikipidea.Rmd
+++ b/wikipidea.Rmd
@@ -16,7 +16,7 @@ library(fpp3)
 
 
 ```{r get the country/device}
-country_class <- function (name) {
+get_country <- function (name) {
   name_and_country_codes <- str_split(name, "[.]wikipedia[.]org") %>%
     map(first)
   country_codes <- str_split(name_and_country_codes, "_") %>%
@@ -25,9 +25,18 @@ country_class <- function (name) {
   return (country_codes)
 }
 
-device_class <- function (name) {
+get_device <- function (name) {
   str_split(name, "[.]wikipedia[.]org_") %>%
     map(last)
+}
+
+get_name <- function (name) {
+  name_and_country_codes <- str_split(name, "[.]wikipedia[.]org") %>%
+    map(first)
+  name <- gsub('.{3}$', '', name_and_country_codes)
+  
+  return (name)
+  
 }
 ```
 
@@ -101,15 +110,17 @@ filtered_wiki_df_with_dates <- wiki_df_with_dates %>%
 ```
 
 ```{r add country/device}
-names <- filtered_wiki_df_with_dates$Page
+pages <- filtered_wiki_df_with_dates$Page
 
-countries <- country_class(names)
+names <- get_name(pages)
 
-devices <- device_class(names)
+countries <- country_class(pages)
+
+devices <- device_class(pages)
 
 wiki_df_with_dates_country_device <- filtered_wiki_df_with_dates %>% 
-  mutate(country = countries, device = devices) %>%
-  relocate(c(country, device), .after=Page)
+  mutate(name = names, country = countries, device = devices) %>%
+  relocate(c(name, country, device), .after=Page)
 ```
 
 ```{r remove spider pages}
@@ -117,14 +128,11 @@ filtered_wiki_df_with_dates_country_device <- wiki_df_with_dates_country_device 
   filter(device != "all-access_spider")
 ```
 
-
-
 ```{r pivot the data fro arima}
 dataset_long <- filtered_wiki_df_with_dates %>%
   pivot_longer(cols = starts_with('2017'), names_to = 'Date', values_to = 'Web_Traffic') %>%
   mutate(Date = as.Date(Date, format = '%Y-%m-%d'))
 ```
-
 
 ```{r}
 #this is a test version
@@ -148,6 +156,28 @@ autoplot(dataset_ts, Web_Traffic) +
   labs(title = 'Web Traffic Forecast', y = 'Web Traffic')
 ```
 
+```{r}
+df_long <- filtered_wiki_df_with_dates_country_device %>% pivot_longer(
+  cols = -c(Page, name, country, device),
+  names_to = "date",
+  values_to = "clicks"
+)
+
+n_dates <- nrow(filtered_wiki_df_with_dates_country_device) - 4
+training_split_index <- ceiling(0.7 * n_dates)
+  
+training_split <- df_long %>% group_by(name, country, device) %>% 
+  slice(1:training_split_index)
+
+testing_split <- df_long %>% group_by(name, country, device) %>% 
+  slice(training_split_index + 1: n_dates)
+```
+
+```{r}
+training_wide <- training_split %>% pivot_wider(names_from = date, values_from = clicks)
+
+testing_wide <- testing_split %>% pivot_wider(names_from = date, values_from = clicks)
+```
 
 
 
